Blender 2.80.48 Outliner grease pencil object layer selection/activation to draw, bug/behavior? #62592

Closed
opened 2019-03-14 23:21:40 +01:00 by blendaluva · 6 comments

System Information
Operating system: Windows 10
Graphics card: Intel 4000/4400

Blender Version
2.80.48
blender-2.80.0-git.55e79d8f36c6-windows64

Short description of error (bug/behavior)
To activate layer in grease pencil stroke object requires double clicking on stroke layer name, as if to rename it, and then click on stroke layer line in outliner, to make it active. Simply clicking on the grease pencil stroke layer highlights it, but does not activate it for drawing.
Seems it would be more intuitive to not mix activation of layer with renaming of layer. Maybe activation of layer can occur with double clicking outside renaming area on the layer line? Or simply selecting the layer can activate it, rather than double clicking to rename it for activation.

Exact steps for others to reproduce the error
video link shows exact steps:
https://youtu.be/nl9hErzA89w

**System Information** Operating system: Windows 10 Graphics card: Intel 4000/4400 **Blender Version** 2.80.48 blender-2.80.0-git.55e79d8f36c6-windows64 **Short description of error** (bug/behavior) To activate layer in grease pencil stroke object requires double clicking on stroke layer name, as if to rename it, and then click on stroke layer line in outliner, to make it active. Simply clicking on the grease pencil stroke layer highlights it, but does not activate it for drawing. Seems it would be more intuitive to not mix activation of layer with renaming of layer. Maybe activation of layer can occur with double clicking outside renaming area on the layer line? Or simply selecting the layer can activate it, rather than double clicking to rename it for activation. **Exact steps for others to reproduce the error** video link shows exact steps: https://youtu.be/nl9hErzA89w
Author

Added subscriber: @blendaluva

Added subscriber: @blendaluva

Added subscribers: @brecht, @antoniov

Added subscribers: @brecht, @antoniov

Really, the Outliner is not designed to use as main point to change layers. There is panel for that and there, you only need a click and have more tools to manage layers.

@brecht Do you know what we could do here?

Really, the Outliner is not designed to use as main point to change layers. There is panel for that and there, you only need a click and have more tools to manage layers. @brecht Do you know what we could do here?

@antoniov, I think clicking might as well activate the layer, same kind of activation happens for other types of items in the outliner.

tree_element_active_gplayer is commented out in the code for some reason.

@antoniov, I think clicking might as well activate the layer, same kind of activation happens for other types of items in the outliner. `tree_element_active_gplayer` is commented out in the code for some reason.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Antonio Vazquez self-assigned this 2019-03-15 14:40:21 +01:00

Fixed with d5d518b96c

Thanks @brecht for the tip!

Fixed with d5d518b96c16 Thanks @brecht for the tip!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62592
No description provided.