Fix  T62592: GPencil layer activation from outliner needed two clicks

For some reason, the code was commented and we missed to enable it again.